forge/tests/error/bad_option_enum.frg
#lang forge 

option solver NOT_A_REAL_SOLVER
run {}